tests/snapshots/snapshot_protocol__envelope_fatal_with_ref_id.snap
---
source: tests/snapshot_protocol.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "00000000-0000-4000-8000-000000000001",
  "error": "sidecar process exited with code 137 (OOM killed)"
}
