tests/snapshots/snapshot_protocol__envelope_fatal_without_ref_id.snap
---
source: tests/snapshot_protocol.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": null,
  "error": "failed to initialize: missing API key"
}
