tests/snapshots/snapshot_protocol__envelope_hello_default_mode.snap
---
source: tests/snapshot_protocol.rs
expression: json_str
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "sidecar:claude",
    "backend_version": "3.5.0",
    "adapter_version": "0.1.0"
  },
  "capabilities": {
    "streaming": "native",
    "tool_use": "native",
    "extended_thinking": "emulated"
  },
  "mode": "mapped"
}
