tests/snapshots/snapshot_protocol__envelope_hello_minimal_capabilities.snap
---
source: tests/snapshot_protocol.rs
expression: json_str
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "mock",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {
    "streaming": "native"
  },
  "mode": "mapped"
}
