tests/snapshots/snapshot_protocol__envelope_hello_passthrough_mode.snap
---
source: tests/snapshot_protocol.rs
expression: json_str
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "sidecar:node",
    "backend_version": null,
    "adapter_version": null
  },
  "capabilities": {},
  "mode": "passthrough"
}
