tests/snapshots/snapshot_protocol__envelope_run_basic.snap
---
source: tests/snapshot_protocol.rs
expression: env
---
{
  "t": "run",
  "id": "00000000-0000-4000-8000-000000000001",
  "work_order": {
    "id": "[uuid]",
    "task": "Write a unit test",
    "lane": "patch_first",
    "workspace": {
      "root": ".",
      "mode": "staged",
      "include": [],
      "exclude": []
    },
    "context": {
      "files": [],
      "snippets": []
    },
    "policy": {
      "allowed_tools": [],
      "disallowed_tools": [],
      "deny_read": [],
      "deny_write": [],
      "allow_network": [],
      "deny_network": [],
      "require_approval_for": []
    },
    "requirements": {
      "required": []
    },
    "config": {
      "model": null,
      "vendor": {},
      "env": {},
      "max_budget_usd": null,
      "max_turns": null
    }
  }
}
